--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ keywords = [
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -25,10 +24,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.9"
 cryptography = "^43.0.0"
 httpx = "^0.27.2"
-pandas = "^2.0.3"
+pandas = "^2.2.2"
 PyJWT = "^2.9.0"
 PyYAML = "^6.0.2"
 
@@ -39,6 +38,7 @@ mypy = "^1.11.2"
 flake8 = "^7.1.1"
 invoke = "^2.2.0"
 types-pyyaml = "^6.0.12.20240808"
+pytest-httpx = "^0.30.0"
 
 [tool.poetry.scripts]
 app-store-download-count-badge-maker = "maker.main:cli"
