--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ httpx = "^0.27.2"
 pandas = "^2.2.2"
 PyJWT = "^2.9.0"
 PyYAML = "^6.0.2"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
