--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.14"
 cryptography = "^43.0.0"
 httpx = "^0.27.2"
 pandas = "^2.2.2"
