--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -67,7 +67,7 @@ jobs:
         cache: "poetry"
 
     - name: Install dependencies
-      run: poetry install --sync --with dev --no-root
+      run: poetry sync --with dev --no-root
 
     - name: mypy
       uses: tsuyoshicho/action-mypy@v5
