--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        poetry install --sync --no-root
+        poetry sync --no-root
         poetry self add "poetry-dynamic-versioning[plugin]"
 
     - name: Run pytest
