--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,17 +29,16 @@ jobs:
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
 
-    - name: Install poetry
-      run: pipx install poetry
-
     - name: Set up Python environment
       uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'poetry'
 
-    - name: Install dependencies
-      run: poetry sync --with dev --no-root
+    - name: Install required-version defined in pyproject.toml
+      uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
+      with:
+        python-version: ${{ matrix.python-version }}
+        enable-cache: 'true'
 
     - name: mypy
       uses: tsuyoshicho/action-mypy@089e02ea49b666337a91bd665d8af1d6dd5dadce  # 5.1.1
@@ -47,7 +46,7 @@ jobs:
         github_token: ${{ secrets.github_token }}
         reporter: github-pr-review
         level: warning
-        execute_command: poetry run mypy --config-file mypy.ini .
+        execute_command: uv run mypy --config-file mypy.ini .
 
   actionlint:
     runs-on: ubuntu-latest
