--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,21 +15,14 @@ jobs:
       with:
         python-version: '3.13'
 
-    - name: Install poetry
-      run: |
-        pip install -U pip pipx
-        pipx install poetry
-        poetry run pip install -U setuptools pip
-        poetry self add "poetry-dynamic-versioning[plugin]"
-
-    - name: Configure poetry
-      uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+    - name: Install required-version defined in pyproject.toml
+      uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
       with:
         python-version: '3.13'
-        cache: 'poetry'
+        enable-cache: 'true'
 
     - name: Build package
-      run: poetry build
+      run: uv build
 
     - name: Upload distribution
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
