--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,23 +20,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install poetry
-      run: |
-        pip install -U pip pipx
-        pipx install poetry
-
-    - name: Configure poetry
-      uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+    - name: Install required-version defined in pyproject.toml
+      uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
       with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
-
-    - name: Install dependencies
-      shell: bash
-      run: |
-        poetry sync --no-root
-        poetry self add "poetry-dynamic-versioning[plugin]"
+        python-version: ${{ matrix.python-version }}
+        enable-cache: 'true'
 
     - name: Run pytest
       run: |
-        poetry run python -m pytest -v tests
+        uv run python -m pytest -v tests
